--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
       margin: 0.5rem 0 1rem;
     }
 
-    /* BUTTON STYLES */
     .btn {
       display: inline-block;
       background: linear-gradient(45deg, #28a745, #1e7e34);
@@ -65,29 +64,21 @@
       text-decoration: none;
       position: relative;
       overflow: hidden;
-      box-shadow:
-        0 0 5px #28a745,
-        0 0 15px #28a745;
+      box-shadow: 0 0 5px #28a745, 0 0 15px #28a745;
       animation: pulse 2.5s infinite;
       transition: background 0.3s ease, transform 0.2s ease;
       margin-top: 1rem;
     }
 
-    /* Glow pulse animation */
     @keyframes pulse {
       0%, 100% {
-        box-shadow:
-          0 0 5px #28a745,
-          0 0 15px #28a745;
+        box-shadow: 0 0 5px #28a745, 0 0 15px #28a745;
       }
       50% {
-        box-shadow:
-          0 0 10px #3de03d,
-          0 0 25px #3de03d;
+        box-shadow: 0 0 10px #3de03d, 0 0 25px #3de03d;
       }
     }
 
-    /* Sliding shine effect */
     .btn::before {
       content: '';
       position: absolute;
@@ -99,7 +90,6 @@
       transform: skewX(-25deg);
       filter: blur(5px);
       pointer-events: none;
-      transition: none;
     }
 
     .btn:hover::before {
@@ -107,25 +97,18 @@
     }
 
     @keyframes shine {
-      from {
-        left: -75%;
-      }
-      to {
-        left: 125%;
-      }
+      from { left: -75%; }
+      to { left: 125%; }
     }
 
     .btn:hover {
       background: linear-gradient(45deg, #3de03d, #1e7e34);
       transform: scale(1.1);
-      box-shadow:
-        0 0 10px #3de03d,
-        0 0 30px #3de03d;
+      box-shadow: 0 0 10px #3de03d, 0 0 30px #3de03d;
     }
 
-    /* MODAL STYLES */
     .modal {
-      display: none; /* Hidden by default */
+      display: none;
       position: fixed;
       z-index: 9999;
       left: 0;
@@ -172,7 +155,7 @@
     .modal-content p.description {
       font-size: 1.1rem;
       color: #d4d4d4;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
     }
 
     .modal .btn {
@@ -194,6 +177,16 @@
 
     .modal-close:hover {
       color: #3de03d;
+    }
+
+    .warning {
+      font-size: 0.9rem;
+      color: #f8d7da;
+      background: rgba(255, 0, 0, 0.1);
+      border: 1px solid #f5c2c7;
+      border-radius: 6px;
+      padding: 0.75rem;
+      margin-bottom: 1.5rem;
     }
   </style>
 </head>
@@ -230,6 +223,7 @@
       <h2>VIP Tier 1</h2>
       <p class="price">$5</p>
       <p class="description">VIP Armor & Role on Discord and Minecraft + exclusive Discord channel.</p>
+      <p class="warning">⚠️ <strong>Make sure the note says your gamertag</strong> or you might not receive the VIP role.<br>By sending the money to <strong>iiGeaex</strong> on CashApp, you agree that <u>you will not be refunded</u>.</p>
       <a class="btn" href="https://cash.app/$iiGeaex/5" target="_blank">Buy Now for $5</a>
     </div>
   </div>
@@ -240,6 +234,7 @@
       <h2>VIP Tier 2</h2>
       <p class="price">$10</p>
       <p class="description">All from Tier 1 & 2% off all purchases on the shop when gifting vip to your friends.</p>
+      <p class="warning">⚠️ <strong>Make sure the note says your gamertag</strong> or you might not receive the VIP role.<br>By sending the money to <strong>iiGeaex</strong> on CashApp, you agree that <u>you will not be refunded</u>.</p>
       <a class="btn" href="https://cash.app/$iiGeaex/10" target="_blank">Buy Now for $10</a>
     </div>
   </div>
@@ -250,6 +245,7 @@
       <h2>VIP Tier 3</h2>
       <p class="price">$15</p>
       <p class="description">Everything in Tier 2 + The Ability to fly in Minecraft.</p>
+      <p class="warning">⚠️ <strong>Make sure the note says your gamertag</strong> or you might not receive the VIP role.<br>By sending the money to <strong>iiGeaex</strong> on CashApp, you agree that <u>you will not be refunded</u>.</p>
       <a class="btn" href="https://cash.app/$iiGeaex/15" target="_blank">Buy Now for $15</a>
     </div>
   </div>
@@ -260,6 +256,7 @@
       <h2>VIP Tier 4</h2>
       <p class="price">$20</p>
       <p class="description">Full VIP access: all tiers + 5% off all purchases on the shop when gifting vip to your friends.</p>
+      <p class="warning">⚠️ <strong>Make sure the note says your gamertag</strong> or you might not receive the VIP role.<br>By sending the money to <strong>iiGeaex</strong> on CashApp, you agree that <u>you will not be refunded</u>.</p>
       <a class="btn" href="https://cash.app/$iiGeaex/20" target="_blank">Buy Now for $20</a>
     </div>
   </div>
@@ -267,15 +264,15 @@
   <script>
     function openModal(tier) {
       document.getElementById('modal' + tier).style.display = 'block';
-      document.body.style.overflow = 'hidden'; // prevent background scroll
+      document.body.style.overflow = 'hidden';
     }
 
     function closeModal(event, tier) {
-      if (event.target.classList.contains('modal') || event.target.classList.contains('modal-close')) {
-        document.getElementById('modal' + tier).style.display = 'none';
-        document.body.style.overflow = 'auto';
-      }
+      event.stopPropagation();
+      document.getElementById('modal' + tier).style.display = 'none';
+      document.body.style.overflow = '';
     }
   </script>
+
 </body>
 </html>
