--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="favicon.png" type="image/png">
   <title>Buy VIP - iiGeaex</title>
   <style>
     body {
