--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="favicon.png" type="image/png">
-  <title>Buy VIP - iiGeaex</title>
+  <title>Heaven LifeSteal</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
