--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <h2>VIP Tier 2</h2>
       <p class="price">$10</p>
       <p class="description">
-        All from Tier 1 & 2% off all purchases on the shop when gifting VIP to your friends.
+        All from Tier 1 + Upgraded Vip Armor & early beta access to new seasons.
       </p>
       <p class="warning">
         ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
@@ -294,7 +294,7 @@
       <h2>VIP Tier 4</h2>
       <p class="price">$20</p>
       <p class="description">
-        Full VIP access: all tiers + 5% off all purchases on the shop when gifting VIP to your friends.
+        Full VIP access: all tiers + 10 beacon of life
       </p>
       <p class="warning">
         ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
