--- a/index.html
+++ b/index.html
@@ -206,10 +206,11 @@
       margin-bottom: 1.5rem;
     }
 
-    /* ✅ NEW DISCORD SUPPORT SECTION BELOW */
+    /* ✅ SUPPORT SECTION */
     .support-section {
       margin-top: 4rem;
       text-align: center;
+      padding-bottom: 3rem;
     }
 
     .support-text {
@@ -244,7 +245,7 @@
       color: white;
       text-decoration: none;
       border-radius: 8px;
-      margin-top: 2rem;
+      margin-top: 1rem;
       box-shadow: 0 0 10px rgba(50, 205, 50, 0.5);
       transition: transform 0.2s ease, box-shadow 0.3s ease;
       text-shadow: 1px 1px 2px #000;
@@ -254,6 +255,30 @@
       transform: scale(1.05);
       box-shadow: 0 0 20px #00ff00, 0 0 30px #00ff00;
       background-image: linear-gradient(145deg, #5ffb5f, #3da33d);
+    }
+
+    /* ✅ RESPONSIVE STYLES */
+    @media (max-width: 600px) {
+      .tiers-container {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .tier {
+        width: 90%;
+      }
+
+      .btn,
+      .modal .btn,
+      .discord-btn {
+        width: 90%;
+        font-size: 1rem;
+        padding: 12px 20px;
+      }
+
+      .modal-content {
+        width: 95%;
+      }
     }
   </style>
 </head>
@@ -266,24 +291,24 @@
       <h2>VIP Tier 1</h2>
       <p class="price">$5</p>
     </div>
-
     <div class="tier" onclick="openModal(2)">
       <h2>VIP Tier 2</h2>
       <p class="price">$10</p>
     </div>
-
     <div class="tier" onclick="openModal(3)">
       <h2>VIP Tier 3</h2>
       <p class="price">$15</p>
     </div>
-
     <div class="tier" onclick="openModal(4)">
       <h2>VIP Tier 4</h2>
       <p class="price">$20</p>
     </div>
   </div>
 
-  <!-- ✅ New Support & Discord Button Section -->
+  <!-- ✅ Modals (keep above Discord section) -->
+  <!-- INSERT YOUR MODALS FROM PREVIOUS CODE HERE -->
+
+  <!-- ✅ Discord Support Section -->
   <div class="support-section">
     <p class="support-text">
       Need help or have questions?<br>
@@ -293,9 +318,6 @@
       🧱 Join Our Discord
     </a>
   </div>
-
-  <!-- Existing modals remain here... -->
-  <!-- [Modals are unchanged so they are omitted for brevity] -->
 
   <script>
     function openModal(tier) {
