--- a/index.html
+++ b/index.html
@@ -157,23 +157,8 @@
       to { opacity: 1; transform: scale(1);}
     }
 
-    .modal-close {
-      position: absolute;
-      top: 12px;
-      right: 16px;
-      font-size: 1.8rem;
-      cursor: pointer;
-      color: #eee;
-      font-weight: bold;
-      user-select: none;
-      transition: color 0.3s ease;
-    }
-
-    .modal-close:hover {
-      color: #3de03d;
-    }
-
     .modal-content h2 {
+      margin-top: 0;
       font-size: 2.2rem;
       color: #b4f7b4;
     }
@@ -190,6 +175,27 @@
       margin-bottom: 1.5rem;
     }
 
+    .modal .btn {
+      font-size: 1.2rem;
+      padding: 14px 32px;
+    }
+
+    .modal-close {
+      position: absolute;
+      top: 12px;
+      right: 16px;
+      font-size: 1.8rem;
+      cursor: pointer;
+      color: #eee;
+      font-weight: bold;
+      user-select: none;
+      transition: color 0.3s ease;
+    }
+
+    .modal-close:hover {
+      color: #3de03d;
+    }
+
     .warning {
       font-size: 0.9rem;
       color: #f8d7da;
@@ -200,67 +206,51 @@
       margin-bottom: 1.5rem;
     }
 
-    /* Discord Section Styles */
-    @font-face {
-      font-family: 'Minecraft';
-      src: url('https://fonts.cdnfonts.com/s/19885/MinecraftTen-VGORe.ttf') format('truetype');
-    }
-
+    /* Added Discord Support Styles */
     .support-section {
-      margin-top: 4rem;
+      margin: 2rem auto 1rem auto;
+      max-width: 350px;
+      color: #b4f7b4;
+      font-weight: 600;
+      font-size: 1.1rem;
       text-align: center;
     }
 
-    .support-text {
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
-      color: #ccc;
-    }
-
-    .support-text .arrow {
-      font-size: 2rem;
+    .support-section .arrow {
+      font-size: 1.8rem;
       display: block;
-      margin: 0.25rem 0;
-      animation: bounce 1.5s infinite;
+      margin: 0.2rem 0 0.7rem 0;
+      user-select: none;
     }
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-    }
-
-    .discord-btn {
+    .discord-button {
       display: inline-block;
-      margin-top: 0.5rem;
-      padding: 16px 36px;
+      background: #7289da;
+      color: white;
+      padding: 12px 28px;
       font-size: 1.1rem;
-      font-family: 'Minecraft', 'Segoe UI', sans-serif;
-      text-transform: uppercase;
-      font-weight: bold;
-      color: #fff;
-      background: repeating-linear-gradient(45deg, #5865f2, #5865f2 10px, #4752c4 10px, #4752c4 20px);
-      border: 3px solid #99aab5;
+      font-weight: 700;
       border-radius: 8px;
       text-decoration: none;
-      box-shadow: 0 0 0 4px #2c2f33, 0 0 12px #5865f2;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      image-rendering: pixelated;
+      box-shadow: 0 0 15px #7289da;
+      transition: background 0.3s ease, transform 0.2s ease;
+      user-select: none;
     }
 
-    .discord-btn:hover {
+    .discord-button:hover {
+      background: #5b6eae;
       transform: scale(1.05);
-      box-shadow: 0 0 0 4px #2c2f33, 0 0 18px #99aab5, 0 0 28px #7289da;
+      box-shadow: 0 0 25px #5b6eae;
     }
 
+    /* Responsive */
     @media (max-width: 600px) {
-      .discord-btn {
-        width: 90%;
-        font-size: 1rem;
-        padding: 12px 20px;
+      .tiers-container {
+        flex-direction: column;
+        align-items: center;
       }
-
-      .support-text {
-        font-size: 1rem;
+      .tier {
+        width: 90%;
       }
     }
   </style>
@@ -274,31 +264,106 @@
       <h2>VIP Tier 1</h2>
       <p class="price">$5</p>
     </div>
+
     <div class="tier" onclick="openModal(2)">
       <h2>VIP Tier 2</h2>
       <p class="price">$10</p>
     </div>
+
     <div class="tier" onclick="openModal(3)">
       <h2>VIP Tier 3</h2>
       <p class="price">$15</p>
     </div>
+
     <div class="tier" onclick="openModal(4)">
       <h2>VIP Tier 4</h2>
       <p class="price">$20</p>
     </div>
   </div>
 
-  <!-- Modals (Unchanged) -->
-  <!-- [Modal content here - omitted for brevity] -->
+  <!-- MODALS -->
+  <div id="modal1" class="modal" onclick="closeModal(event, 1)">
+    <div class="modal-content" onclick="event.stopPropagation()">
+      <div class="modal-close" onclick="closeModal(event, 1)">&times;</div>
+      <h2>VIP Tier 1</h2>
+      <p class="price">$5</p>
+      <p class="description">
+        VIP Armor & Role on Discord and Minecraft + exclusive Discord channel.
+      </p>
+      <p class="warning">
+        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
+        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
+        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+      </p>
+      <a class="btn" href="https://cash.app/$iiGeaex/5" target="_blank">Buy Now for $5</a>
+    </div>
+  </div>
+
+  <div id="modal2" class="modal" onclick="closeModal(event, 2)">
+    <div class="modal-content" onclick="event.stopPropagation()">
+      <div class="modal-close" onclick="closeModal(event, 2)">&times;</div>
+      <h2>VIP Tier 2</h2>
+      <p class="price">$10</p>
+      <p class="description">
+        All from Tier 1 + Upgraded Vip Armor & early beta access to new seasons.
+      </p>
+      <p class="warning">
+        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
+        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
+        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+      </p>
+      <a class="btn" href="https://cash.app/$iiGeaex/10" target="_blank">Buy Now for $10</a>
+    </div>
+  </div>
+
+  <div id="modal3" class="modal" onclick="closeModal(event, 3)">
+    <div class="modal-content" onclick="event.stopPropagation()">
+      <div class="modal-close" onclick="closeModal(event, 3)">&times;</div>
+      <h2>VIP Tier 3</h2>
+      <p class="price">$15</p>
+      <p class="description">
+        Everything in Tier 2 + The Ability to fly in Minecraft.
+      </p>
+      <p class="warning">
+        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
+        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
+        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+      </p>
+      <a class="btn" href="https://cash.app/$iiGeaex/15" target="_blank">Buy Now for $15</a>
+    </div>
+  </div>
+
+  <div id="modal4" class="modal" onclick="closeModal(event, 4)">
+    <div class="modal-content" onclick="event.stopPropagation()">
+      <div class="modal-close" onclick="closeModal(event, 4)">&times;</div>
+      <h2>VIP Tier 4</h2>
+      <p class="price">$20</p>
+      <p class="description">
+        Full VIP access: all tiers + 10 beacon of life
+      </p>
+      <p class="warning">
+        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
+        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
+        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+      </p>
+      <a class="btn" href="https://cash.app/$iiGeaex/20" target="_blank">Buy Now for $20</a>
+    </div>
+  </div>
 
   <!-- Discord Support Section -->
   <div class="support-section">
-    <p class="support-text">
-      Need help or have questions?<br>
-      <span class="arrow">⬇️</span> Click below for support!
-    </p>
-    <a href="https://discord.gg/wM2mTZXeEX" class="discord-btn" target="_blank">
-      🧱 Join Our Discord
+    Need help or have questions?
+    <span class="arrow">⬇️</span>
+    Click below for support!
+  </div>
+
+  <div style="text-align:center; margin-bottom: 3rem;">
+    <a href="https://discord.gg/yourdiscordlink" target="_blank" class="discord-button" rel="noopener noreferrer">
+      Join our Discord
     </a>
   </div>
 
@@ -314,5 +379,6 @@
       document.body.style.overflow = '';
     }
   </script>
+
 </body>
 </html>
