--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
   </div>
 
   <div style="text-align:center; margin-bottom: 3rem;">
-    <a href="https://discord.gg/yourdiscordlink" target="_blank" class="discord-button" rel="noopener noreferrer">
+    <a href="https://discord.gg/wM2mTZXeEX" target="_blank" class="discord-button" rel="noopener noreferrer">
       Join our Discord
     </a>
   </div>
