--- a/discord/index.html
+++ b/discord/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://discord.gg/YOUR_INVITE_CODE" />
+    <meta http-equiv="refresh" content="0; url=https://discord.gg/wM2mTZXeEX" />
     <title>Redirecting to Discord...</title>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://discord.gg/YOUR_INVITE_CODE">click here to join the Discord server</a>.</p>
+    <p>If you are not redirected, <a href="https://discord.gg/wM2mTZXeEX">click here to join the Discord server</a>.</p>
   </body>
 </html>
