--- a/index.html
+++ b/index.html
@@ -291,12 +291,12 @@
         VIP Armor & Role on Discord and Minecraft + exclusive Discord channel.
       </p>
       <p class="warning">
-        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
-        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ <strong>Note:</strong> This is an <u>automatic monthly subscription</u>.<br>
+        Your membership will renew monthly.<br><br>
         ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
-        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+        By subscribing to <strong>VIP Tier 1</strong> via Ko-fi, you agree that <u>payments are non-refundable</u>.
       </p>
-      <a class="btn" href="https://cash.app/$iiGeaex/5" target="_blank">Buy Now for $5</a>
+      <a class="btn" href="https://ko-fi.com/summary/40a9f8ff-1911-4437-a8d9-8356eca8720c" target="_blank" rel="noopener noreferrer">Join VIP Tier 1 for $5/mo</a>
     </div>
   </div>
 
@@ -309,12 +309,12 @@
         All from Tier 1 + Upgraded Vip Armor & early beta access to new seasons.
       </p>
       <p class="warning">
-        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
-        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ <strong>Note:</strong> This is an <u>automatic monthly subscription</u>.<br>
+        Your membership will renew monthly.<br><br>
         ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
-        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+        By subscribing to <strong>VIP Tier 2</strong> via Ko-fi, you agree that <u>payments are non-refundable</u>.
       </p>
-      <a class="btn" href="https://cash.app/$iiGeaex/10" target="_blank">Buy Now for $10</a>
+      <a class="btn" href="https://ko-fi.com/summary/6c10ab8d-269c-42aa-83b7-385e033f8dbb" target="_blank" rel="noopener noreferrer">Join VIP Tier 2 for $10/mo</a>
     </div>
   </div>
 
@@ -327,12 +327,12 @@
         Everything in Tier 2 + The Ability to fly in Minecraft.
       </p>
       <p class="warning">
-        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
-        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ <strong>Note:</strong> This is an <u>automatic monthly subscription</u>.<br>
+        Your membership will renew monthly.<br><br>
         ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
-        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+        By subscribing to <strong>VIP Tier 3</strong> via Ko-fi, you agree that <u>payments are non-refundable</u>.
       </p>
-      <a class="btn" href="https://cash.app/$iiGeaex/15" target="_blank">Buy Now for $15</a>
+      <a class="btn" href="https://ko-fi.com/summary/38bae798-65c4-4de4-87d8-342345b2c8d4" target="_blank" rel="noopener noreferrer">Join VIP Tier 3 for $15/mo</a>
     </div>
   </div>
 
@@ -345,12 +345,12 @@
         Full VIP access: all tiers + 10 beacon of life
       </p>
       <p class="warning">
-        ⚠️ <strong>Note:</strong> This is a manual monthly subscription.<br>
-        You must send payment each month to maintain VIP status.<br><br>
+        ⚠️ <strong>Note:</strong> This is an <u>automatic monthly subscription</u>.<br>
+        Your membership will renew monthly.<br><br>
         ⚠️ Make sure to include your gamertag in the payment note to receive the VIP role.<br>
-        By sending money to <strong>iiGeaex</strong> on CashApp, you agree that <u>payments are non-refundable</u>.
+        By subscribing to <strong>VIP Tier 4</strong> via Ko-fi, you agree that <u>payments are non-refundable</u>.
       </p>
-      <a class="btn" href="https://cash.app/$iiGeaex/20" target="_blank">Buy Now for $20</a>
+      <a class="btn" href="https://ko-fi.com/summary/cfea92de-32ce-4586-944a-a659946eadd4" target="_blank" rel="noopener noreferrer">Join VIP Tier 4 for $20/mo</a>
     </div>
   </div>
 
